# GL-Video-Player

./: .gitignore  .gitmodules  ALPlayer.cpp  ALPlayer.hpp  AudioFile.cpp  AudioFile.hpp  AudioStream.cpp  AudioStream.hpp  CMakeLists.txt  GLRender.cpp  GLRender.hpp  HWDecoder.cpp  HWDecoder.hpp  ShaderLoader.hpp  VideoFile.cpp  VideoFile.hpp  VideoStream.cpp  VideoStream.hpp  deps  main.cpp  main_old.cpp  memory_helper.h
AndroidApp/app/: build.gradle
AndroidApp/app/src/main/cpp/: CMakeLists.txt
AndroidApp/app/src/main/cpp/CVideoEncDec/: CMakeLists.txt  DataStream.c  DataStream.h  VideoFile.c  helpers.c  helpers.h
AndroidApp/app/src/main/cpp/CVideoEncDec/ffmpeg/android/x86_64/: libpostproc.so.55  libswresample.so.3
AndroidApp/app/src/main/cpp/sfml/linux/x86_64/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1
AndroidApp/gradle/wrapper/: gradle-wrapper.properties
AudioPlayer/: ALPlayer.hpp  CMakeLists.txt
CAudioPlayer/: CAudioPlayer.c  CAudioPlayer.h  CMakeLists.txt  CSample.c  CSample.h
CRenderEngine/: CMakeLists.txt  CMaterial.c  CMaterial.h  CSprite.c  CSprite.h  CTexture2D.c  CTexture2D.h  GShader.c  GShader.h
CRenderEngine/glad/include/glad/: glad.h
CVideoEncDec/: CMakeLists.txt  DataStream.c  DataStream.h  HWAccelerator.c  HWAccelerator.h  HWDecoder.c  HWDecoder.h  VideoFile.c  VideoFile.h  helpers.c  helpers.h
CVideoEncDec/ffmpeg/android/arm64-v8a/: libavdevice.so.58
CVideoEncDec/ffmpeg/android/armeabi/: libavutil.so.56  libswscale.so.5
CVideoEncDec/ffmpeg/include/libavutil/: ffversion.h
VideoEncDec/: AudioStream.cpp  CMakeLists.txt  HWDecoder.cpp  HWDecoder.hpp  VideoFile.cpp  VideoFile.hpp  VideoStream.cpp  VideoStream.hpp  decoder_helper.c  decoder_helper.h  memory_helper.c  memory_helper.h
VideoRender/: CMakeLists.txt  GLRender.cpp  GLRender.hpp  GRenderObject.hpp  GShader.cpp  GShader.hpp  GSprite.cpp  GSprite.hpp  GTexture2D.cpp  GTexture2D.hpp  GTextureObject.hpp  GTypeObject.hpp  ShaderLoader.cpp  ShaderLoader.hpp  TypeManager.cpp  TypeManager.hpp
VideoRender/glad/: CMakeLists.txt
VideoRender/glad/src/: glad.c
audio-system/: AudioDevice.hpp  AudioSource.cpp  AudioSource.hpp
render/: CMakeLists.txt  RenderMain.hpp  ShaderLoader.cpp  ShaderLoader.hpp
render-system/: CMakeLists.txt  RenderLogging.cpp  RenderMain.cpp
resources/shaders/: fragment.glsl  vertex.glsl
sfml/linux/x86_64/: libsfml-network.so.2.5.1  libsfml-window.so.2.5.1
video-decoding-system/: CMakeLists.txt  VideoFile.cpp  VideoFile.hpp
